--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd {
     background-color: #ffb6c1; 
-    font-family: verdana, DeJavu Sans, sans-serif;
+    font-family: verdana, "DejaVu Sans", sans-serif; 
 }
 
 #second {
